--- a/javascript/building-blocks/tasks/loops/loops1-download.html
+++ b/javascript/building-blocks/tasks/loops/loops1-download.html
@@ -28,11 +28,8 @@
   <script>
     const myArray = ['tomatoes', 'chick peas', 'onions', 'rice', 'black beans'];
     const list = document.createElement('ul');
-
-    // Add your code here
-
-    // Don't edit the code below here!
-
+    for (let i = 0; i <myArray.length; i++) {
+      console.log(myArray());
     const section = document.querySelector('section');
     section.appendChild(list);
   </script>
